# databricks-deep-research-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  app.yaml  databricks.yml  databricks_deploy.py  deploy_config.yaml  log_and_deploy.py  pyproject.toml  requirements-test.txt  requirements.txt
.specify/memory/: constitution.md
agent/: CLAUDE.md  requirements-docs.txt  requirements-test.txt  requirements.txt  start_agent_with_ui.sh  stop_agent.sh
agent/conf/: base.yaml  integration_test.yaml  test.yaml
agent/deep_research_agent/: __init__.py  agent_config.yaml  agent_config_enhanced.yaml  agent_initialization.py  config_loader.py  databricks_compatible_agent.py  databricks_helper.py  databricks_response_builder.py  enhanced_research_agent.py  prompts.py  research_agent_refactored.py  response_utils.py  state_management.py  tools_brave.py  tools_tavily.py  tools_tavily_refactored.py  workflow_nodes.py  workflow_nodes_enhanced.py
agent/deploy/: __main__.py  cli.py  command_executor.py  deployment_steps.py  direct_endpoint_deploy.py  error_reporter.py  operational_deploy.py  test_runner.py  validator.py  workspace_manager.py
agent/tests/: README.md  conftest.py  pytest.ini  test_agent_streaming_compliance.py  test_all_progress_phases.py  test_brave_search.py  test_conversation_memory.py  test_coordinator_agent.py  test_core_components.py  test_event_emitter.py  test_fact_checker_agent.py  test_integration.py  test_intermediate_events_integration.py  test_mlflow_responses_agent.py  test_multi_agent_integration.py  test_planner_agent.py  test_real_end_to_end.py  test_reasoning_tracer.py  test_redaction_utils.py  test_refactored_agent.py  test_reporter_agent.py  test_researcher_agent.py  test_schema_compliance.py  test_streaming_chunks.py  test_streaming_schema.py  test_table_preprocessor.py  test_table_preprocessor_integration.py  test_table_streaming_integrity.py  test_ui_streaming_integration.py
agent/ui/: index.html  package-lock.json  package.json  tailwind.config.js  test-id-consistency.mjs  test-simple-stream.mjs  test-step-events-playwright.mjs  test-step-events.mjs  test-step-tracking.mjs  tsconfig.json  vite.config.ts
config/: app.e2e.yaml  app.example.yaml  app.test.yaml  app.yaml
deep_research_agent/: databricks_helper.py  search_manager.py  tools_brave.py  tools_brave_refactored.py  tools_refactored.py  tools_vector_search.py  workflow_nodes.py
deep_research_agent/components/: content_extractor.py  message_converter.py  response_builder.py
deep_research_agent/core/: adaptive_generation.py  base_tools.py  cache_manager.py  deduplication.py  error_handler.py  exceptions.py  model_manager.py
deploy/: README.md  __init__.py  __main__.py  command_executor.py  config.py  config.yaml  direct_endpoint_deploy.py  endpoint_manager.py  operational_deploy.py
docs/: README.md  agents.md  api.md  architecture.md  citation-pipeline.md  configuration.md  data-models.md  deployment.md  llm-interaction.md  scientific-foundations.md
e2e/: package-lock.json  package.json  playwright.config.ts  test-results.json
e2e/fixtures/: app.fixture.ts  chat.fixture.ts  index.ts
e2e/pages/: chat.page.ts  citations.page.ts  research.page.ts  sidebar.page.ts
e2e/tests/: chat-management.spec.ts  citations.spec.ts  edit-message.spec.ts  error-handling.spec.ts  follow-up.spec.ts  grey-references.spec.ts  numeric-claims.spec.ts  provenance-export.spec.ts  regenerate.spec.ts  research-flow.spec.ts  smoke.spec.ts  stop-cancel.spec.ts  verification-summary.spec.ts
e2e/utils/: test-data.ts  wait-helpers.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  main.tsx
frontend/test-results/: .last-run.json
scripts/: analyze_traces.py  clean-db.sh  create-database.sh  download-app-logs.py  download-app-logs.sh  grant-app-permissions.sh  kill-server.sh  purge_deleted_chats.py  quickstart.sh  test_lakebase.py  wait-for-lakebase.sh
specs/001-deep-research-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-claim-level-citations/: data-model.md  plan.md  quickstart.md  research.md  sota_research.md  spec.md  tasks.md
specs/004-tiered-query-modes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-plugin-architecture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py  static_files.py
src/agent/: __init__.py  config.py  orchestrator.py  persistence.py  state.py
src/agent_server/: __init__.py  agent.py  start_server.py  utils.py
src/core/: app_config.py  auth.py  config.py  dependencies.py  exceptions.py  logging_utils.py  pagination.py  tracing.py
src/db/: base.py  lakebase_auth.py  session.py
src/deep_research/: __init__.py  main.py  static_files.py
src/middleware/: audit.py  auth.py  logging.py
src/models/: __init__.py  audit_log.py  chat.py  citation.py  citation_correction.py  claim.py  enums.py  evidence_span.py  message.py  message_feedback.py  numeric_claim.py  research_session.py  source.py  user_preferences.py  verification_summary.py
src/schemas/: __init__.py  agent.py  chat.py  citation.py  common.py  feedback.py  message.py  preferences.py  research.py  streaming.py
src/services/: __init__.py  chat_service.py  citation_service.py  claim_service.py  evidence_span_service.py  export_service.py  feedback_service.py  message_service.py  preferences_service.py  research_session_service.py  source_service.py  verification_summary_service.py
static/: index.html
static/assets/: index-2N4T5eDg.js  index-BIBTxYSJ.js  index-BNEHIPq5.css  index-CPmJIGNJ.js  index-CdRPhb7q.css
tests/: __init__.py  conftest.py  pytest.ini  test_agent_brave_integration.py  test_brave_search.py
tests/complex/: __init__.py  conftest.py  test_complex_research.py
tests/integration/: conftest.py  (+3 more)
ui/: CLAUDE.md  app.yaml  pyproject.toml  requirements.txt  setup.sh  watch.sh
(+726 files in other folders)
