[project]
name = "databricks-deep-research-agent"
version = "0.1.0"
description = "Deep research agent with 5-agent architecture for Databricks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "greenlet>=3.0.0",
    "psycopg[binary,pool]>=3.1.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "mlflow>=3.8.0",
    "databricks-sdk>=0.20.0",
    "json-repair>=0.25.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0.0",
    "sse-starlette>=2.0.0",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "httpx>=0.26.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long - handled by formatter
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
# Stub endpoints have unused parameters that will be used when implemented
"src/api/v1/chats.py" = ["ARG001"]
"src/api/v1/messages.py" = ["ARG001"]
"src/api/v1/preferences.py" = ["ARG001"]
"src/api/v1/research.py" = ["ARG001"]
# Exception handlers require request parameter by FastAPI signature
"src/core/exceptions.py" = ["ARG001"]
# Tracing stubs have reserved parameters for future use
"src/core/tracing.py" = ["ARG001"]
# SPA serving uses path but not request
"src/static_files.py" = ["ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "mlflow.*",
    "databricks.*",
    "sse_starlette.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test requiring external services",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 0
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
